fixed the app's layout issues

--- a/src/WeatherInfo.css
+++ b/src/WeatherInfo.css
@@ -1,3 +1,15 @@
+.sidebar {
+  max-height: 580px;
+  width: 270px;
+  padding-top: 40px;
+  padding-bottom: 60px;
+  background-color: var(--sidebar-color);
+  box-shadow: 3px 4px 5px rgba(0, 0, 0, .3);   
+  border-radius: 10px 0 0 10px; 
+  text-align: center;  
+  
+}
+
 .sidebar__container {
     margin: 0 32px;
   }
